2009-04-28  Andrew Pinski  <pinskia@gmail.com>

PR target/39929
        * config/darwin.c (machopic_gen_offset): Check
        currently_expanding_to_rtl if current_ir_type returns IR_GIMPLE.
        * config/arm/arm.c (require_pic_register): Likewise.





git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@146894 138bc75d-0d04-0410-961f-82ee72b054a4