gcc/config/darwin.c
@@ -281,7 +281,7 @@ machopic_gen_offset (rtx orig)
     {
       /* Play games to avoid marking the function as needing pic if we
 	 are being called as part of the cost-estimation process.  */
-      if (current_ir_type () != IR_GIMPLE)
+      if (current_ir_type () != IR_GIMPLE || currently_expanding_to_rtl)
 	crtl->uses_pic_offset_table = 1;
       orig = gen_rtx_UNSPEC (Pmode, gen_rtvec (1, orig),
 			     UNSPEC_MACHOPIC_OFFSET);
